Closed
Bug 1082114
Opened 11 years ago
Closed 11 years ago
Fix pre-setData() calls to .available()
Categories
(Core :: Networking, defect)
Core
Networking
Tracking
()
RESOLVED
FIXED
mozilla36
People
(Reporter: sfink, Assigned: sfink)
References
Details
Attachments
(1 file)
|
1.16 KB,
patch
|
Waldo
:
review+
Sylvestre
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
Bug 1061288 fetch the ArrayBuffer length to use for .available(), which crashes if there is no buffer yet set.
| Assignee | ||
Comment 1•11 years ago
|
||
Attachment #8504234 -
Flags: review?(jwalden+bmo)
Comment 2•11 years ago
|
||
Comment on attachment 8504234 [details] [diff] [review]
Fix pre-setData() calls to .available()
Review of attachment 8504234 [details] [diff] [review]:
-----------------------------------------------------------------
This should also be backported, of course.
Attachment #8504234 -
Flags: review?(jwalden+bmo) → review+
Comment 3•11 years ago
|
||
I have a test in bug 991981 that, when landed, will somewhat incidentally test this. So no need for a test here, I think.
Component: JavaScript Engine → Networking
Comment 4•11 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla36
| Assignee | ||
Comment 5•11 years ago
|
||
Comment on attachment 8504234 [details] [diff] [review]
Fix pre-setData() calls to .available()
Approval Request Comment
[Feature/regressing bug #]: 1061288
[User impact if declined]: crash (null pointer deref) if abis.available() called early
[Describe test coverage new/current, TBPL]: on m-c for a day or two
[Risks and why]: low risk. Just an added null check.
[String/UUID change made/needed]: none
Attachment #8504234 -
Flags: approval-mozilla-aurora?
Updated•11 years ago
|
status-firefox35:
--- → affected
status-firefox36:
--- → fixed
Updated•11 years ago
|
Attachment #8504234 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 6•11 years ago
|
||
You need to log in
before you can comment on or make changes to this bug.
Description
•