Bug 1082114 - Fix pre-setData() calls to .available(). r=Waldo, a=sledru